--- a/src/components/button/buttonStyle.module.scss
+++ b/src/components/button/buttonStyle.module.scss
@@ -1,4 +1,10 @@
 .container {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   border: 1px solid gray;
   text-align: center;
   padding-top: 10px;
@@ -28,5 +34,12 @@
   color: white;
   &:hover {
     box-shadow: inset 0px 0px 30px 0px #EDBD8E;
+  }
+}
+
+.Disabled {
+  background-color: #C0C4C3;
+  &:hover {
+    cursor: not-allowed;
   }
 }
